# AlphaEdge

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  firebase.json  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
config/: model_config.yaml  tickers.yaml
docs/: API.md  DEPLOYMENT.md  MODELS.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/backtesting/: page.tsx
frontend/app/predictions/: page.tsx
frontend/app/sentiment/: page.tsx
frontend/components/: CountUp.tsx  GlobeScene.tsx  MeshBackground.tsx  PriceBarsScene.tsx  SentimentSphere.tsx  Sidebar.tsx  Toast.tsx
frontend/lib/: api.ts
scripts/: evaluate_models.py  train_models.py  update_data.py
src/alphaedge/: __init__.py  config.py  logger.py
src/alphaedge/analytics/: __init__.py  explainer.py  visualizer.py
src/alphaedge/api/: __init__.py  _error_utils.py  dependencies.py  main.py  middleware.py  schemas.py
src/alphaedge/api/routes/: __init__.py  analytics.py  backtesting.py  predictions.py
src/alphaedge/auth/: __init__.py
src/alphaedge/backtesting/: __init__.py  engine.py  metrics.py  strategy.py
src/alphaedge/core/: __init__.py  predictor.py
src/alphaedge/data/: __init__.py  fetcher.py  processor.py  sentiment.py
src/alphaedge/features/: __init__.py  engineer.py  patterns.py  technical.py
src/alphaedge/models/: __init__.py  base.py  ensemble.py  lstm_model.py  transformer.py  xgboost_model.py
src/alphaedge/utils/: __init__.py  cache.py  cloudflare.py  firebase_db.py  validators.py
tests/: conftest.py  test_api.py  test_backtesting.py  test_models.py
